fix home pic on mobile

--- a/layout/styles/layout.css
+++ b/layout/styles/layout.css
@@ -969,3 +969,31 @@ body {
 	padding:10px 0;
   }
   
+
+  .list-container img {
+	float: left; /*浮在左侧*/
+	width: 100%;
+	height: 100%;
+	opacity: 0.5;
+}
+
+#list-mobile {
+
+	height: 100%;
+	position: absolute; /*绝对定位*/
+	z-index: 1;
+  }
+
+
+/* 隐藏桌面端和移动端的不相关图片 */
+@media screen and (max-width: 768px) {
+  #list {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 769px) {
+  #list-mobile {
+    display: none;
+  }
+}
